x overflow fix

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -429,7 +429,7 @@ button {
 /* searchbar */
 
 #cover {
-  width: 90rem;
+  width: 76rem;
   border-radius: 1rem;
   transform: scale(0.6);
 }
